# room215-kafka-ui

./: package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: rust.yml  tauri-publish.yaml  tauri-test.yaml
.svelte-kit/: ambient.d.ts
.svelte-kit/output/client/_app/immutable/chunks/: index.1b9b1e3c.js  index.c6da1de8.js  singletons.2b2f2c9a.js
.svelte-kit/output/client/_app/immutable/entry/: app.9123bc91.js  start.74def9c6.js
.svelte-kit/output/client/_app/immutable/nodes/: 0.0dea4116.js  0.7b9836c5.js  1.ba67ac63.js  3.87a7c6e1.js  4.7022d55d.js  5.b597fa99.js  6.efc2064a.js
.svelte-kit/output/prerendered/pages/: index.html
.svelte-kit/output/prerendered/pages/ui/: topic.html
.svelte-kit/output/server/: index.js  manifest-full.js  manifest.js
.svelte-kit/output/server/chunks/: internal.js  local-storage.js
.svelte-kit/output/server/entries/pages/: _page.svelte.js
.svelte-kit/output/server/entries/pages/ui/: _page.svelte.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js  3.js  4.js  5.js  6.js
.svelte-kit/types/: route_meta_data.json
.svelte-kit/types/src/routes/: $types.d.ts
.svelte-kit/types/src/routes/ui/: $types.d.ts
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/service/: mod.rs
src/lib/: entities.ts  local-storage.ts
src/routes/: +layout.server.ts  +page.svelte
src/routes/ui/: +page.svelte
src/routes/ui/topic/: +page.svelte
src/routes/ui/topic/[slug]/: +page.svelte
(+3 files in other folders)
